--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    line-height: 1.25;
-    background-color: #b4d0f0;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+body{
+    font-family: "Roboto", sans-serif;
 }
 
-.callout {
-    background-color: #6ff589;
-    padding: 1em;
-    font-size: .8em;
-    line-height: 1.5;
-    color: #21221A;
+body {
+    background-color: #1f2120;
+    color: #ddf0cb;
+    font-family: "Nunito Sans", sans-serif;
+    font-size: 12px;
 }
+
+main {
+    background-color: #57e5e5;
+    color: #020202;
+}
+
